Правки по сайту и вёрстка нижнего меню

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -42,6 +42,7 @@
 			@include('chunk/footer.html')
 			@include('../components/sidebar/sidebar.html')
 			@include('../components/sidebar/sidebar-socials.html')
+			@include('chunk/menu-bottom.html')
 			@include('../components/modal/modal-quiz.html')
 			@include('../components/modal/modal-application.html')
 			@include('../components/modal/modal-question.html')
