--- a/assets/html/chunk/deadline.html
+++ b/assets/html/chunk/deadline.html
@@ -58,6 +58,11 @@
 							<td class="table__item">100-150</td>
 							<td class="table__item">100-150</td>
 						</tr>
+						<tr class="table__row">
+							<td class="table__item table__item--center" colspan="5">
+								<button class="table__btn btn-reset">Показать ещё</button>
+							</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
