Добавление маски на поля с телефонами

--- a/assets/html/chunk/cost.html
+++ b/assets/html/chunk/cost.html
@@ -129,7 +129,13 @@
 					</p>
 					<div class="form__socials">
 						<div class="form__social form-social">
-							<input class="is-hidden" id="telegramCost" name="social" type="radio" value="telegram" />
+							<input
+								class="is-hidden"
+								id="telegramCost"
+								name="social"
+								type="radio"
+								value="telegram"
+							/>
 							<label class="form-social__label" for="telegramCost">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#telegram-icon"></use>
@@ -139,7 +145,13 @@
 						</div>
 
 						<div class="form__social form-social">
-							<input class="is-hidden" id="whatsappCost" name="social" type="radio" value="whatsapp" />
+							<input
+								class="is-hidden"
+								id="whatsappCost"
+								name="social"
+								type="radio"
+								value="whatsapp"
+							/>
 							<label class="form-social__label" for="whatsappCost">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#whatsapp-icon"></use>
@@ -170,7 +182,7 @@
 					</div>
 					<div class="form__inputs">
 						<input class="form__input-text" type="text" placeholder="Ваше имя" />
-						<input class="form__input-text" type="text" placeholder="Ваш телефон" />
+						<input class="form__input-text" type="tel" placeholder="Ваш телефон" />
 						<input class="btn-reset form__input-button" type="submit" value="Отправить" />
 					</div>
 					<p class="form__text">
