Добавление ссылки в галерею

--- a/assets/html/chunk/gallery.html
+++ b/assets/html/chunk/gallery.html
@@ -53,6 +53,8 @@
 					</a>
 				</div>
 			</div>
+
+			<a class="gallery__link link link-reset" href="#/">Показать ещё</a>
 		</div>
 	</div>
 </section>
