--- a/assets/html/chunk/deadline.html
+++ b/assets/html/chunk/deadline.html
@@ -60,7 +60,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="5">
-								<button class="table__btn btn-reset">Показать ещё</button>
+								<button class="table__btn btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
