--- a/assets/html/chunk/tags.html
+++ b/assets/html/chunk/tags.html
@@ -2,51 +2,15 @@
 	<div class="container">
 		<div class="tags">
 			<div class="tags__wrap">
-				<div class="tags__item tag">
-					<span class="tag__name"> Маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Обработка по маякам</span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Паркетной доски полов по маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Олов по маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Обработка по маякам</span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Паркетной доски полов по маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Обработка по маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Олов по маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Обработка по маякам</span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Обработка по маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Обработка по маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Олов по маякам </span>
-				</div>
-				<div class="tags__item tag">
-					<span class="tag__name"> Паркетной доски полов по маякам </span>
-				</div>
+				<a class="tags__item tag link-reset" href="#/">
+					Маякам
+				</a>
+				<a class="tags__item tag link-reset" href="#/">
+					Обработка по маякам
+				</a>
+				<a class="tags__item tag link-reset" href="#/">
+					Паркетной доски полов по маякам
+				</a>
 			</div>
 			<a class="link-reset link tags__link" href="#/">Показать больше</a>
 		</div>
