Подготовка к натяжке на WordPress

--- a/assets/html/chunk/cost.html
+++ b/assets/html/chunk/cost.html
@@ -4,12 +4,8 @@
 			<h2 class="title">Узнайте стоимость ремонта</h2>
 			<div class="cost__wrap">
 				<div class="cost__card cost-card">
-					<div class="cost-card__img">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-1.jpg');">
 						<span class="cost-card__deadline">Сроки от 1 дня</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
 					</div>
 					<div class="cost-card__content">
 						<h3 class="cost-card__title">Косметический ремонт</h3>
@@ -27,12 +23,8 @@
 					</div>
 				</div>
 				<div class="cost__card cost-card">
-					<div class="cost-card__img">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-2.jpg');">
 						<span class="cost-card__deadline">Сроки от 3 дней</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-2.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-2.jpg" />
-						</picture>
 					</div>
 					<div class="cost-card__content">
 						<h3 class="cost-card__title">Черновой ремонт</h3>
@@ -51,12 +43,8 @@
 					</div>
 				</div>
 				<div class="cost__card cost-card">
-					<div class="cost-card__img">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-3.jpg');">
 						<span class="cost-card__deadline">Сроки от 3 дней</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-3.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-3.jpg" />
-						</picture>
 					</div>
 					<div class="cost-card__content">
 						<h3 class="cost-card__title">Капитальный ремонт</h3>
@@ -75,12 +63,8 @@
 					</div>
 				</div>
 				<div class="cost__card cost-card">
-					<div class="cost-card__img">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-4.jpg');">
 						<span class="cost-card__deadline">Сроки от 1 дня</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-4.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-4.jpg" />
-						</picture>
 					</div>
 					<div class="cost-card__content">
 						<h3 class="cost-card__title">Дизайнерский ремонт</h3>
@@ -99,12 +83,8 @@
 					</div>
 				</div>
 				<div class="cost__card cost-card">
-					<div class="cost-card__img">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-5.jpg');">
 						<span class="cost-card__deadline">Сроки от 3 дней</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-5.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-5.jpg" />
-						</picture>
 					</div>
 					<div class="cost-card__content">
 						<h3 class="cost-card__title">Евроремонт</h3>
@@ -129,13 +109,7 @@
 					</p>
 					<div class="form__socials">
 						<div class="form__social form-social">
-							<input
-								class="is-hidden"
-								id="telegramCost"
-								name="social"
-								type="radio"
-								value="telegram"
-							/>
+							<input class="is-hidden" id="telegramCost" name="social" type="radio" value="telegram" />
 							<label class="form-social__label" for="telegramCost">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#telegram-icon"></use>
@@ -145,13 +119,7 @@
 						</div>
 
 						<div class="form__social form-social">
-							<input
-								class="is-hidden"
-								id="whatsappCost"
-								name="social"
-								type="radio"
-								value="whatsapp"
-							/>
+							<input class="is-hidden" id="whatsappCost" name="social" type="radio" value="whatsapp" />
 							<label class="form-social__label" for="whatsappCost">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#whatsapp-icon"></use>
@@ -187,9 +155,7 @@
 					</div>
 					<p class="form__text">
 						Нажимая на кнопку, Вы соглашаетесь с
-						<a class="form__text form__text--link link-reset" href="#/"
-							>политикой конфиденциальности</a
-						>
+						<a class="form__text form__text--link link-reset" href="#/">политикой конфиденциальности</a>
 					</p>
 				</form>
 			</div>
