--- a/assets/html/chunk/service-prices.html
+++ b/assets/html/chunk/service-prices.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section section--decor">
 	<div class="container">
 		<div class="service-prices">
 			<h2 class="title">Цены на отдельные услуги при ремонте</h2>
