--- a/assets/html/chunk/examples.html
+++ b/assets/html/chunk/examples.html
@@ -5,23 +5,18 @@
 
 			<div class="examples__cards">
 				<div class="examples__card examples-card">
-					<div class="examples-card__img">
+					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.jpg');">
 						<span class="examples-card__square">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#square"></use>
 							</svg>
-							45м<sup>2</sup></span
-						>
+							45м<sup>2</sup></span>
 						<span class="examples-card__deadline">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#time"></use>
 							</svg>
 							53 дня
 						</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
 					</div>
 					<div class="examples-card__content">
 						<h3 class="examples-card__title">Косметический ремонт</h3>
@@ -33,70 +28,25 @@
 						</div>
 						<div class="examples-card__inner">
 							<span class="examples-card__examples">
-								540 000<span class="examples-card__examples examples-card__examples--blue"
-									>&#8381;</span
-								>
-							</span>
-							<a class="link link-reset" href="#/">Подробнее</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="examples__card examples-card">
-					<div class="examples-card__img">
-						<span class="examples-card__square">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#square"></use>
-							</svg>
-							45м<sup>2</sup></span
-						>
-						<span class="examples-card__deadline">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#time"></use>
-							</svg>
-							53 дня
-						</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
-					</div>
-					<div class="examples-card__content">
-						<h3 class="examples-card__title">Косметический ремонт</h3>
-						<div class="examples-card__geo geo">
-							<svg class="geo__icon">
-								<use href="img/icons/sprite.svg#geo"></use>
-							</svg>
-							<span class="geo__text text">ул. им. Гоголя, 151</span>
-						</div>
-						<div class="examples-card__inner">
-							<span class="examples-card__examples">
-								540 000<span class="examples-card__examples examples-card__examples--blue"
-									>&#8381;</span
-								>
+								540 000<span class="examples-card__examples examples-card__examples--blue">&#8381;</span>
 							</span>
 							<a class="link link-reset" href="#/">Подробнее</a>
 						</div>
 					</div>
 				</div>
 				<div class="examples__card examples-card">
-					<div class="examples-card__img">
+					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.jpg');">
 						<span class="examples-card__square">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#square"></use>
 							</svg>
-							45м<sup>2</sup></span
-						>
+							45м<sup>2</sup></span>
 						<span class="examples-card__deadline">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#time"></use>
 							</svg>
 							53 дня
 						</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
 					</div>
 					<div class="examples-card__content">
 						<h3 class="examples-card__title">Косметический ремонт</h3>
@@ -108,32 +58,25 @@
 						</div>
 						<div class="examples-card__inner">
 							<span class="examples-card__examples">
-								540 000<span class="examples-card__examples examples-card__examples--blue"
-									>&#8381;</span
-								>
+								540 000<span class="examples-card__examples examples-card__examples--blue">&#8381;</span>
 							</span>
 							<a class="link link-reset" href="#/">Подробнее</a>
 						</div>
 					</div>
 				</div>
 				<div class="examples__card examples-card">
-					<div class="examples-card__img">
+					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.jpg');">
 						<span class="examples-card__square">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#square"></use>
 							</svg>
-							45м<sup>2</sup></span
-						>
+							45м<sup>2</sup></span>
 						<span class="examples-card__deadline">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#time"></use>
 							</svg>
 							53 дня
 						</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
 					</div>
 					<div class="examples-card__content">
 						<h3 class="examples-card__title">Косметический ремонт</h3>
@@ -145,160 +88,7 @@
 						</div>
 						<div class="examples-card__inner">
 							<span class="examples-card__examples">
-								540 000<span class="examples-card__examples examples-card__examples--blue"
-									>&#8381;</span
-								>
-							</span>
-							<a class="link link-reset" href="#/">Подробнее</a>
-						</div>
-					</div>
-				</div>
-				<div class="examples__card examples-card">
-					<div class="examples-card__img">
-						<span class="examples-card__square">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#square"></use>
-							</svg>
-							45м<sup>2</sup></span
-						>
-						<span class="examples-card__deadline">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#time"></use>
-							</svg>
-							53 дня
-						</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
-					</div>
-					<div class="examples-card__content">
-						<h3 class="examples-card__title">Косметический ремонт</h3>
-						<div class="examples-card__geo geo">
-							<svg class="geo__icon">
-								<use href="img/icons/sprite.svg#geo"></use>
-							</svg>
-							<span class="geo__text text">ул. им. Гоголя, 151</span>
-						</div>
-						<div class="examples-card__inner">
-							<span class="examples-card__examples">
-								540 000<span class="examples-card__examples examples-card__examples--blue"
-									>&#8381;</span
-								>
-							</span>
-							<a class="link link-reset" href="#/">Подробнее</a>
-						</div>
-					</div>
-				</div>
-				<div class="examples__card examples-card">
-					<div class="examples-card__img">
-						<span class="examples-card__square">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#square"></use>
-							</svg>
-							45м<sup>2</sup></span
-						>
-						<span class="examples-card__deadline">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#time"></use>
-							</svg>
-							53 дня
-						</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
-					</div>
-					<div class="examples-card__content">
-						<h3 class="examples-card__title">Косметический ремонт</h3>
-						<div class="examples-card__geo geo">
-							<svg class="geo__icon">
-								<use href="img/icons/sprite.svg#geo"></use>
-							</svg>
-							<span class="geo__text text">ул. им. Гоголя, 151</span>
-						</div>
-						<div class="examples-card__inner">
-							<span class="examples-card__examples">
-								540 000<span class="examples-card__examples examples-card__examples--blue"
-									>&#8381;</span
-								>
-							</span>
-							<a class="link link-reset" href="#/">Подробнее</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="examples__card examples-card">
-					<div class="examples-card__img">
-						<span class="examples-card__square">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#square"></use>
-							</svg>
-							45м<sup>2</sup></span
-						>
-						<span class="examples-card__deadline">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#time"></use>
-							</svg>
-							53 дня
-						</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
-					</div>
-					<div class="examples-card__content">
-						<h3 class="examples-card__title">Косметический ремонт</h3>
-						<div class="examples-card__geo geo">
-							<svg class="geo__icon">
-								<use href="img/icons/sprite.svg#geo"></use>
-							</svg>
-							<span class="geo__text text">ул. им. Гоголя, 151</span>
-						</div>
-						<div class="examples-card__inner">
-							<span class="examples-card__examples">
-								540 000<span class="examples-card__examples examples-card__examples--blue"
-									>&#8381;</span
-								>
-							</span>
-							<a class="link link-reset" href="#/">Подробнее</a>
-						</div>
-					</div>
-				</div>
-				<div class="examples__card examples-card">
-					<div class="examples-card__img">
-						<span class="examples-card__square">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#square"></use>
-							</svg>
-							45м<sup>2</sup></span
-						>
-						<span class="examples-card__deadline">
-							<svg class="examples-card__icon">
-								<use href="img/icons/sprite.svg#time"></use>
-							</svg>
-							53 дня
-						</span>
-						<picture>
-							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
-							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
-						</picture>
-					</div>
-					<div class="examples-card__content">
-						<h3 class="examples-card__title">Косметический ремонт</h3>
-
-						<div class="examples-card__geo geo">
-							<svg class="geo__icon">
-								<use href="img/icons/sprite.svg#geo"></use>
-							</svg>
-							<span class="geo__text text">ул. им. Гоголя, 151</span>
-						</div>
-
-						<div class="examples-card__inner">
-							<span class="examples-card__examples">
-								540 000<span class="examples-card__examples examples-card__examples--blue"
-									>&#8381;</span
-								>
+								540 000<span class="examples-card__examples examples-card__examples--blue">&#8381;</span>
 							</span>
 							<a class="link link-reset" href="#/">Подробнее</a>
 						</div>
