--- a/assets/html/chunk/questions.html
+++ b/assets/html/chunk/questions.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section section--decor">
 	<div class="container">
 		<div class="questions">
 			<h2 class="title">Вопрос-ответ</h2>
