--- a/assets/html/chunk/turnkey.html
+++ b/assets/html/chunk/turnkey.html
@@ -17,11 +17,7 @@
 						сайте.
 					</p>
 				</div>
-				<div class="turnkey__img">
-					<picture>
-						<source type="image/webp" data-srcset="./img/turnkey/builder.webp" />
-						<img class="lazyload" alt="Строитель" data-src="./img/turnkey/builder.jpg" />
-					</picture>
+				<div class="turnkey__img" style="background-image: url('@img/turnkey/builder.jpg');">
 				</div>
 			</div>
 		</div>
