Подключение скрипта для скрытия лишних элементов в секцию с тегами

--- a/assets/html/chunk/tags.html
+++ b/assets/html/chunk/tags.html
@@ -10,9 +10,19 @@
 				</a>
 				<a class="tags__item tag link-reset" href="#/">
 					Паркетной доски полов по маякам
+				</a><a class="tags__item tag link-reset" href="#/">
+					Паркетной доски полов по маякам
+				</a><a class="tags__item tag link-reset" href="#/">
+					Паркетной доски полов по маякам
+				</a><a class="tags__item tag link-reset" href="#/">
+					Паркетной доски полов по маякам
+				</a><a class="tags__item tag link-reset" href="#/">
+					Паркетной доски полов по маякам
+				</a><a class="tags__item tag link-reset" href="#/">
+					Паркетной доски полов по маякам
 				</a>
 			</div>
-			<a class="link-reset link tags__link" href="#/">Показать больше</a>
+			<button class="btn-reset btn tags__btn">Показать ещё</button>
 		</div>
 	</div>
 </section>
