Включение iframe в вёрстку

--- a/assets/html/chunk/video-review.html
+++ b/assets/html/chunk/video-review.html
@@ -3,7 +3,7 @@
 		<div class="video-review">
 			<h2 class="title">Видеоотзывы</h2>
 			<div class="video-review__wrap">
-				<!-- <iframe
+				<iframe
 					width="560"
 					height="315"
 					src="https://www.youtube.com/embed/JGGSJVEy_W0"
@@ -11,7 +11,7 @@
 					frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 					allowfullscreen
-				></iframe> -->
+				></iframe>
 			</div>
 		</div>
 	</div>
