Правки в галерее и боковом меню

--- a/assets/html/chunk/gallery.html
+++ b/assets/html/chunk/gallery.html
@@ -53,8 +53,7 @@
 					</a>
 				</div>
 			</div>
-
-			<a class="gallery__link link link-reset" href="#/">Показать ещё</a>
+			<button class="btn-reset btn gallery__btn">Показать ещё</button>
 		</div>
 	</div>
 </section>
