--- a/assets/html/chunk/installment.html
+++ b/assets/html/chunk/installment.html
@@ -15,7 +15,7 @@
 						<p class="installment-card__text">
 							Первоначальный взнос
 							<br />
-							<span class="installment-card__text--blue">0 рублей</span>
+							<span class="installment-card__text installment-card__text--blue">0 рублей</span>
 						</p>
 					</li>
 
@@ -28,7 +28,7 @@
 						<p class="installment-card__text">
 							Срок предоставления
 							<br />
-							<span class="installment-card__text--blue">12 месяцев</span>
+							<span class="installment-card__text installment-card__text--blue">12 месяцев</span>
 						</p>
 					</li>
 
@@ -41,7 +41,7 @@
 						<p class="installment-card__text">
 							Для оформления достаточно только
 							<br />
-							<span class="installment-card__text--blue">вашего паспорта</span>
+							<span class="installment-card__text installment-card__text--blue">вашего паспорта</span>
 						</p>
 					</li>
 
@@ -54,7 +54,7 @@
 						<p class="installment-card__text">
 							Оформление в офисе
 							<br />
-							<span class="installment-card__text--blue">20 минут</span>
+							<span class="installment-card__text installment-card__text--blue">20 минут</span>
 						</p>
 					</li>
 				</ul>
