--- a/assets/html/chunk/separate-cost.html
+++ b/assets/html/chunk/separate-cost.html
@@ -14,7 +14,7 @@
 						<li class="separate-cost-card__item text">Укладка ламината</li>
 					</ul>
 					<span class="separate-cost-card__cost"
-						>от <span class="separate-cost-card__cost--blue">245</span> руб/м<sup>2</sup></span
+						>от <span class="separate-cost-card__cost separate-cost-card__cost--blue">245</span> руб/м<sup>2</sup></span
 					>
 				</div>
 				<div class="separate-cost__card separate-cost-card">
@@ -28,7 +28,7 @@
 						<li class="separate-cost-card__item text">Заделка рустов</li>
 					</ul>
 					<span class="separate-cost-card__cost"
-						>от <span class="separate-cost-card__cost--blue">280</span> руб/м<sup>2</sup></span
+						>от <span class="separate-cost-card__cost separate-cost-card__cost--blue">280</span> руб/м<sup>2</sup></span
 					>
 				</div>
 				<div class="separate-cost__card separate-cost-card">
@@ -42,7 +42,7 @@
 						<li class="separate-cost-card__item text">Штукатурка стен</li>
 					</ul>
 					<span class="separate-cost-card__cost"
-						>от <span class="separate-cost-card__cost--blue">280</span> руб/м<sup>2</sup></span
+						>от <span class="separate-cost-card__cost separate-cost-card__cost--blue">280</span> руб/м<sup>2</sup></span
 					>
 				</div>
 				<div class="separate-cost__card separate-cost-card">
@@ -56,7 +56,7 @@
 						<li class="separate-cost-card__item text">Демонтаж битума с пола</li>
 					</ul>
 					<span class="separate-cost-card__cost"
-						>от <span class="separate-cost-card__cost--blue">200</span> руб/м<sup>2</sup></span
+						>от <span class="separate-cost-card__cost separate-cost-card__cost--blue">200</span> руб/м<sup>2</sup></span
 					>
 				</div>
 				<div class="separate-cost__card separate-cost-card">
@@ -70,7 +70,7 @@
 						<li class="separate-cost-card__item text">Монтаж медной трубы</li>
 					</ul>
 					<span class="separate-cost-card__cost"
-						>от <span class="separate-cost-card__cost--blue">380</span> руб/м<sup>2</sup></span
+						>от <span class="separate-cost-card__cost separate-cost-card__cost--blue">380</span> руб/м<sup>2</sup></span
 					>
 				</div>
 				<div class="separate-cost__card separate-cost-card">
@@ -86,7 +86,7 @@
 						</li>
 					</ul>
 					<span class="separate-cost-card__cost"
-						>от <span class="separate-cost-card__cost--blue">331</span> руб/м<sup>2</sup></span
+						>от <span class="separate-cost-card__cost separate-cost-card__cost--blue">331</span> руб/м<sup>2</sup></span
 					>
 				</div>
 			</div>
