--- a/assets/html/chunk/contacts.html
+++ b/assets/html/chunk/contacts.html
@@ -26,10 +26,10 @@
 
 			<div class="contacts__map map">
 				<iframe
+					class="iframe"
 					src="https://yandex.ru/map-widget/v1/?um=constructor%3A5458e709b1de28b67211480c7ed75590de59447ea9fa451f42ccc3e7e3718fa5&amp;source=constructor"
-					width="100%"
+					width="800"
 					height="500"
-					frameborder="0"
 				></iframe>
 			</div>
 		</div>
