--- a/assets/html/chunk/footer.html
+++ b/assets/html/chunk/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="footer__wrap">
 			<div class="footer__left">
-				<a class="header__logo logo" href="#">
+				<a class="footer__logo logo" href="#">
 					<img class="logo__img" src="@img/header/logo.svg" alt="Logo" />
 				</a>
 
