--- a/assets/html/chunk/foreman.html
+++ b/assets/html/chunk/foreman.html
@@ -6,7 +6,7 @@
 					<h3 class="form__title">Пригласите прораба&#8209;замерщика</h3>
 					<p class="text form__descr">
 						И он посчитает Вам смету прямо на объекте за
-						<span class="form__descr--blue">30 минут!</span>
+						<span class="form__descr form__descr--blue">30 минут!</span>
 					</p>
 
 					<div class="form__inputs">
@@ -16,9 +16,7 @@
 					</div>
 					<p class="form__text">
 						Нажимая на кнопку, Вы соглашаетесь с
-						<a class="form__text form__text--link link-reset" href="#/"
-							>политикой конфиденциальности</a
-						>
+						<a class="form__text form__text--link link-reset" href="#/">политикой конфиденциальности</a>
 					</p>
 				</form>
 			</div>
