--- a/assets/html/chunk/product-repair.html
+++ b/assets/html/chunk/product-repair.html
@@ -3,15 +3,7 @@
 		<div class="product-repair">
 			<h2 class="title">Ремонт однокомнатной квартиры в Ярославле</h2>
 			<div class="product-repair__wrap">
-				<div class="product-repair__img">
-					<picture>
-						<source type="image/webp" data-srcset="img/product-repair/studio-apartment.webp" />
-						<img
-							class="lazyload"
-							alt="Ремонт однокомнатной квартиры"
-							data-src="img/product-repair/studio-apartment.jpg"
-						/>
-					</picture>
+				<div class="product-repair__img" style="background-image: url('@img/product-repair/studio-apartment.jpg')">
 				</div>
 				<div class="product-repair__info">
 					<p class="product-repair__text text">
@@ -23,9 +15,8 @@
 						ремонт однокомнатной квартиры в соответствии с ГОСТами, СНиПами.
 					</p>
 					<div class="product-repair__inner">
-						<span class="product-repair__cost"
-							>от <span class="product-repair__cost--blue">1010</span> руб/м<sup>2</sup></span
-						>
+						<span class="product-repair__cost">от <span
+								class="product-repair__cost product-repair__cost--blue">1010</span> руб/м<sup>2</sup></span>
 						<a class="link link-reset product-repair__link" href="#/">Оставить заявку</a>
 					</div>
 				</div>
