--- a/assets/html/chunk/tags.html
+++ b/assets/html/chunk/tags.html
@@ -1,6 +1,7 @@
 <section class="section">
 	<div class="container">
 		<div class="tags">
+			<h2 class="visually-hidden">Теги</h2>
 			<div class="tags__wrap">
 				<a class="tags__item tag link-reset" href="#/">
 					Маякам
