Смена формата изображений на .webp

--- a/assets/html/chunk/cost-depends.html
+++ b/assets/html/chunk/cost-depends.html
@@ -44,7 +44,7 @@
 
 				<div
 					class="cost-depends__img"
-					style="background-image: url('@img/cost-depends/cost-depends-bg.jpg')"
+					style="background-image: url('@img/cost-depends/cost-depends-bg.webp')"
 				></div>
 			</div>
 		</div>
