--- a/assets/html/chunk/cost.html
+++ b/assets/html/chunk/cost.html
@@ -4,7 +4,7 @@
 			<h2 class="title">Узнайте стоимость ремонта</h2>
 			<div class="cost__wrap">
 				<div class="cost__card cost-card">
-					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-1.jpg');">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-1.webp');">
 						<span class="cost-card__deadline">Сроки от 1 дня</span>
 					</div>
 					<div class="cost-card__content">
@@ -23,7 +23,7 @@
 					</div>
 				</div>
 				<div class="cost__card cost-card">
-					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-2.jpg');">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-2.webp');">
 						<span class="cost-card__deadline">Сроки от 3 дней</span>
 					</div>
 					<div class="cost-card__content">
@@ -43,7 +43,7 @@
 					</div>
 				</div>
 				<div class="cost__card cost-card">
-					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-3.jpg');">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-3.webp');">
 						<span class="cost-card__deadline">Сроки от 3 дней</span>
 					</div>
 					<div class="cost-card__content">
@@ -63,7 +63,7 @@
 					</div>
 				</div>
 				<div class="cost__card cost-card">
-					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-4.jpg');">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-4.webp');">
 						<span class="cost-card__deadline">Сроки от 1 дня</span>
 					</div>
 					<div class="cost-card__content">
@@ -83,7 +83,7 @@
 					</div>
 				</div>
 				<div class="cost__card cost-card">
-					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-5.jpg');">
+					<div class="cost-card__img" style="background-image: url('@img/cost/repair-photo-5.webp');">
 						<span class="cost-card__deadline">Сроки от 3 дней</span>
 					</div>
 					<div class="cost-card__content">
