--- a/assets/html/chunk/examples.html
+++ b/assets/html/chunk/examples.html
@@ -5,7 +5,7 @@
 
 			<div class="examples__cards">
 				<div class="examples__card examples-card">
-					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.jpg');">
+					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.webp');">
 						<span class="examples-card__square">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#square"></use>
@@ -35,7 +35,7 @@
 					</div>
 				</div>
 				<div class="examples__card examples-card">
-					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.jpg');">
+					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.webp');">
 						<span class="examples-card__square">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#square"></use>
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div class="examples__card examples-card">
-					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.jpg');">
+					<div class="examples-card__img" style="background-image: url('@img/cost/repair-photo-1.webp');">
 						<span class="examples-card__square">
 							<svg class="examples-card__icon">
 								<use href="img/icons/sprite.svg#square"></use>
