--- a/assets/html/chunk/product-repair.html
+++ b/assets/html/chunk/product-repair.html
@@ -3,7 +3,7 @@
 		<div class="product-repair">
 			<h2 class="title">Ремонт однокомнатной квартиры в Ярославле</h2>
 			<div class="product-repair__wrap">
-				<div class="product-repair__img" style="background-image: url('@img/product-repair/studio-apartment.jpg')">
+				<div class="product-repair__img" style="background-image: url('@img/product-repair/studio-apartment.webp')">
 				</div>
 				<div class="product-repair__info">
 					<p class="product-repair__text text">
