--- a/assets/html/chunk/turnkey.html
+++ b/assets/html/chunk/turnkey.html
@@ -17,7 +17,7 @@
 						сайте.
 					</p>
 				</div>
-				<div class="turnkey__img" style="background-image: url('@img/turnkey/builder.jpg');">
+				<div class="turnkey__img" style="background-image: url('@img/turnkey/builder.webp');">
 				</div>
 			</div>
 		</div>
