--- a/assets/html/chunk/where.html
+++ b/assets/html/chunk/where.html
@@ -7,7 +7,7 @@
 				<a
 					class="where__card where-card link-reset"
 					href="#/"
-					style="background-image: url('@img/where/where-img-1.jpg')"
+					style="background-image: url('@img/where/where-img-1.webp')"
 				>
 					<h3 class="where-card__title">Ремонт в квартире</h3>
 				</a>
@@ -15,7 +15,7 @@
 				<a
 					class="where__card where-card link-reset"
 					href="#/"
-					style="background-image: url('@img/where/where-img-2.jpg')"
+					style="background-image: url('@img/where/where-img-2.webp')"
 				>
 					<h3 class="where-card__title">Ремонт в офисе</h3>
 				</a>
@@ -23,7 +23,7 @@
 				<a
 					class="where__card where-card link-reset"
 					href="#/"
-					style="background-image: url('@img/where/where-img-3.jpg')"
+					style="background-image: url('@img/where/where-img-3.webp')"
 				>
 					<h3 class="where-card__title">Ремонт в частном доме</h3>
 				</a>
@@ -31,7 +31,7 @@
 				<a
 					class="where__card where-card link-reset"
 					href="#/"
-					style="background-image: url('@img/where/where-img-4.jpg')"
+					style="background-image: url('@img/where/where-img-4.webp')"
 				>
 					<h3 class="where-card__title">Дизайн интерьера</h3>
 				</a>
